# syslens-cli

./: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt  vars.py
configurations/: example.env  workspace.conf
syslens-cli/: connections.py  formatter.py  main.py  menu.py  vars.py
