[tool.poetry]
name = "syslens-cli"
version = "0.1.0"
description = ""
authors = ["daniel.vazquez-silva <daniel.vazquez-silva@darkwolfsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
paramiko = "^3.4.0"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
